--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,9 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
+config/dev.env.js
+config/prod.env.js
+
 # Editor directories and files
 .idea
 .vscode
