--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "animate.css": "^4.1.1",
     "axios": "^0.21.0",
     "dotenv": "^8.2.0",
     "dotenv-webpack": "^6.0.0",
