--- a/.gitignore
+++ b/.gitignore
@@ -5,8 +5,6 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-prod.env.js
-
 # Editor directories and files
 .idea
 .vscode
@@ -14,3 +12,6 @@ prod.env.js
 *.ntvs*
 *.njsproj
 *.sln
+
+# Local Netlify folder
+.netlify
